# editor

./: .gitignore  CMakeLists.txt  Makefile  README.md  buffer.c  buffer.h  editor.pro  gapbuffer.c  gapbuffer.h  line.c  line.h  logging.c  logging.h  main.c  python_bindings.c  python_bindings.h  python_mod.h  tinydir.h  tui.c  tui.h  util.c  wscript
editor_core/: active_pane.c  buffer.c  buffer.h  editor_core.pro  line.h  util.h
lib/: python_bindings.c  python_mod.h  ui.h  util.c  wscript
plugins/: keybinds.py  multiple_cursors.py  util.py
tui/: main.c  tui.c  tui.pro  wscript
